 - [DS-271] Make the OAI DC crosswalk configurable
 - [DS-260] Template item some times has owningCollection filled and some times not
 - [DS-309] Shiboleth default roles are applied also to anonymous user and user logged-in with other methods
 - [DS-270] Make delegate admin permissions configurable
 - [DS-436] SWORD Authenticator doesn't support the special groups infrastructure

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
 - [DS-238] Move item function in xmlui
 - [DS-281] Invalid Link to "Go to DSpace Home" on Page Not Found (XMLUI)
 - [DS-378] XMLUI Submission Interface messes up in IE7 after an empty <hint> in input_forms.xml
 - [DS-382] Proposal: Add 'dc.creator' to Author browse index by default
 - [DS-385] Packager script is unable to import the same METS + DIM package that was exported
 - [DS-386] Allow user to specify which <dmdSec> is used by the METS Ingester when importing METS from Packager script

(Tim Donohue / Andrea Bollini)
 - [DS-228] Community Admin XMLUI: Delegated Admins Patch

(Ben Bosman)
 - [DS-392] Error messages in the submission do not disappear if e.g. one of the two errors are solved
 - [DS-381] community and collection homepage
 - [DS-310] UTF-8 encoding in community and collection text
 - [DS-307] Offer access in AbstractSearch to QueryResults for subclasses
 - [DS-306] Option to disable mailserver
 - [DS-226] confirmation page of edit profile has an invalid link

(OhioLINK)
 - [DS-225] dc.description.provenance - public display

(Yin Yin Latt / Stuart Lewis)
 - [DS-205] Creative Commons - option to set legal jurisdiction

(Fabio Kepler / Steve Williams)
 - [DS-258] Item View Thumbnails not displaying in XMLUI

(Van Ly)
 - [DS-291] README update for top level of dspace 1.6.0 package directory

(Graham Triggs)
 - [DS-299] Allow long values to be specified for the max upload request (> 2GB uploads)
 - [DS-344] Fix problem where apostrophe in email address would stop EPerson being selected