@@ -114,6 +114,7 @@
  - [DS-309] Shiboleth default roles are applied also to anonymous user and user logged-in with other methods
  - [DS-270] Make delegate admin permissions configurable
  - [DS-436] SWORD Authenticator doesn't support the special groups infrastructure
+ - [DS-415] Create groups via admin UI authorization denied
 
 (Tim Donohue)
  - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
